--- a/App/templates/sdg.html
+++ b/App/templates/sdg.html
@@ -1,48 +1,57 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% comment %} SEARCH + CHECKBOXES {% endcomment %}
     <br>
+    
+    {% comment %} SEARCH + CHECKBOXES {% endcomment %}
+    <form action="{% url 'sdg' %}" method="POST">
+        {% csrf_token %}
+        <h1>UCL5 MieMie NLP & Data Mining Engine 
+            <button style="margin-left: 30px" class="btn btn-primary" type="submit" value='Click' name="updateModuleData">Sync Data</button>
+        </h1>     
+    </form>
+    
+    <br>
+    
     <form action="{% url 'sdg' %}" method="GET" value="{{ request.GET.b }}">
         <input type="text" name="b" value="{{ request.GET.b }}" placeholder="Search DOI"/>
         <input type="submit" name="submit" value="Search"/>
+        <form method="post" action="#">
+            Modules {{ form.modBox }} <input type="checkbox", value="clicked", name="modBox" {{ form.modBox }}> 
+            Publications {{ form.pubBox }} <input type="checkbox", value="clicked", name="pubBox" {{ form.pubBox }}> 
+        </form><br>
     </form>
 
+    <br>
 
-    <form action="{% url 'sdg' %}" method="POST">
-        {% csrf_token %}
-        <button style="margin-left: 30px" class="btn btn-primary" type="submit" value='Click' name="updateModuleData">Sync Data</button>
-    </form>
-    <br><br><br>
-
-
-    <table class="table table-striped">
-        <h3>Publications found: {{ len }}</h3><br>
-        <thead>
-            <tr>
-                <th scope="col">Title</th>
-                <th scope="col">SDG 1</th>
-                <th scope="col">SDG 2</th>
-                <th scope="col">SDG 3</th>
-                <th scope="col">SDG 4</th>
-                <th scope="col">SDG 5</th>
-                <th scope="col">SDG 6</th>
-                <th scope="col">SDG 7</th>
-                <th scope="col">SDG 8</th>
-                <th scope="col">SDG 9</th>
-                <th scope="col">SDG 10</th>
-                <th scope="col">SDG 11</th>
-                <th scope="col">SDG 12</th>
-                <th scope="col">SDG 13</th>
-                <th scope="col">SDG 14</th>
-                <th scope="col">SDG 15</th>
-                <th scope="col">SDG 16</th>
-                <th scope="col">SDG 17</th>
-                <th scope="col">Misc</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for item in pub %}
+    {% if form.pubBox == 'checked' %}
+        <table class="table table-striped">
+            <br><h3>Publications found: {{ lenPub }}</h3><br>
+            <thead>
+                <tr>
+                    <th scope="col">Title</th>
+                    <th scope="col">SDG 1</th>
+                    <th scope="col">SDG 2</th>
+                    <th scope="col">SDG 3</th>
+                    <th scope="col">SDG 4</th>
+                    <th scope="col">SDG 5</th>
+                    <th scope="col">SDG 6</th>
+                    <th scope="col">SDG 7</th>
+                    <th scope="col">SDG 8</th>
+                    <th scope="col">SDG 9</th>
+                    <th scope="col">SDG 10</th>
+                    <th scope="col">SDG 11</th>
+                    <th scope="col">SDG 12</th>
+                    <th scope="col">SDG 13</th>
+                    <th scope="col">SDG 14</th>
+                    <th scope="col">SDG 15</th>
+                    <th scope="col">SDG 16</th>
+                    <th scope="col">SDG 17</th>
+                    <th scope="col">Misc</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in pub %}
                     <tr>
                         <td><a href="{{ item.get_absolute_url }}">{{ item.title }}</a></td>
                         <td>{{ item.assignedSDG.1|floatformat:"2" }}</td>
@@ -64,7 +73,63 @@
                         <td>{{ item.assignedSDG.17|floatformat:"2" }}</td>
                         <td>{{ item.assignedSDG.18|floatformat:"2" }}</td>
                     </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% endif %}
+
+    {% if form.modBox == 'checked' %}
+        <table class="table table-striped">
+            <br><h3>Modules found: {{ lenMod }}</h3><br>
+            <thead>
+                <tr>
+                    <th scope="col">Module ID</th>
+                    <th scope="col">SDG 1</th>
+                    <th scope="col">SDG 2</th>
+                    <th scope="col">SDG 3</th>
+                    <th scope="col">SDG 4</th>
+                    <th scope="col">SDG 5</th>
+                    <th scope="col">SDG 6</th>
+                    <th scope="col">SDG 7</th>
+                    <th scope="col">SDG 8</th>
+                    <th scope="col">SDG 9</th>
+                    <th scope="col">SDG 10</th>
+                    <th scope="col">SDG 11</th>
+                    <th scope="col">SDG 12</th>
+                    <th scope="col">SDG 13</th>
+                    <th scope="col">SDG 14</th>
+                    <th scope="col">SDG 15</th>
+                    <th scope="col">SDG 16</th>
+                    <th scope="col">SDG 17</th>
+                    <th scope="col">Misc</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in mod %}
+                    <tr>
+                        <td><a href="{{ item.get_absolute_url }}">{{ item.Module_ID }}</a></td>
+                        <td>{{ item.assignedSDG.1 }}</td>
+                        <td>{{ item.assignedSDG.2 }}</td>
+                        <td>{{ item.assignedSDG.3 }}</td>
+                        <td>{{ item.assignedSDG.4 }}</td>
+                        <td>{{ item.assignedSDG.5 }}</td>
+                        <td>{{ item.assignedSDG.6 }}</td>
+                        <td>{{ item.assignedSDG.7 }}</td>
+                        <td>{{ item.assignedSDG.8 }}</td>
+                        <td>{{ item.assignedSDG.9 }}</td>
+                        <td>{{ item.assignedSDG.10 }}</td>
+                        <td>{{ item.assignedSDG.11 }}</td>
+                        <td>{{ item.assignedSDG.12 }}</td>
+                        <td>{{ item.assignedSDG.13 }}</td>
+                        <td>{{ item.assignedSDG.14 }}</td>
+                        <td>{{ item.assignedSDG.15 }}</td>
+                        <td>{{ item.assignedSDG.16 }}</td>
+                        <td>{{ item.assignedSDG.17 }}</td>
+                        <td>{{ item.assignedSDG.18 }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% endif %}
+
 {% endblock %}
