--- a/App/templates/sdg.html
+++ b/App/templates/sdg.html
@@ -58,12 +58,10 @@
                     <th scope="col">Predicted</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody style="text-align: center; vertical-align: middle;">
                 {% for item in pub %}
                     <tr>
-                        {% comment %} <td style="border-right: 1pt solid black; border-left: 1pt solid black fill; background-color:rgba(255, 0, 0, 1);"></td> {% endcomment %}
-                        {% comment %} <td style="border-right: 1pt solid black; border-left: 1pt solid black fill; background-color:rgba(255, 255, 0, 1);"></td> {% endcomment %}
-                        <td style="border-right: 1pt solid black; border-left: 1pt solid black fill; background-color:rgba(0, 255, 0, 1);"></td>
+                        <td style="border-right: 1pt solid black; border-left: 1pt solid black fill; background-color:rgba({{item.assignedSDG.Validation.ColorRed}}, {{item.assignedSDG.Validation.ColorGreen}}, {{item.assignedSDG.Validation.ColorBlue}}, 1);"></td>
                         <td><a href="{{ item.get_absolute_url }}">{{ item.title|truncatechars:50 }}</a></td>
                         <td>{{ item.assignedSDG.1|floatformat:"2" }}</td>
                         <td>{{ item.assignedSDG.2|floatformat:"2" }}</td>
@@ -101,7 +99,8 @@
             <thead>
                 <tr>
                     <th scope="col">Status</th>
-                    <th scope="col">Module Name</th>
+                    <th scope="col">Module ID</th>
+                    <th></th>
                     <th scope="col">SDG 1</th>
                     <th scope="col">SDG 2</th>
                     <th scope="col">SDG 3</th>
@@ -121,38 +120,40 @@
                     <th scope="col">SDG 17</th>
                     <th scope="col">Misc</th>
                     <th scope="col">Predicted</th>
+                    <th scope="col">Validation Similarity</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody style="text-align: center; vertical-align: middle;">
                 {% for item in mod %}
                     <tr style="border-bottom: 1pt solid black">
-                        {% comment %} <td style="border-right: 1pt solid black; border-left: 1pt solid black fill; background-color:rgba(255, 0, 0, 1);"></td> {% endcomment %}
-                        {% comment %} <td style="border-right: 1pt solid black; border-left: 1pt solid black fill; background-color:rgba(255, 255, 0, 1);"></td> {% endcomment %}
-                        <td style="border-right: 1pt solid black; border-left: 1pt solid black fill; background-color:rgba(0, 255, 0, 1);"></td>
-                        <td><a href="{{ item.get_absolute_url }}">{{ item.Module_Name|truncatechars:50 }}</a></td>
-                        <td>{{ item.assignedSDG.1 }}</td>
-                        <td>{{ item.assignedSDG.2 }}</td>
-                        <td>{{ item.assignedSDG.3 }}</td>
-                        <td>{{ item.assignedSDG.4 }}</td>
-                        <td>{{ item.assignedSDG.5 }}</td>
-                        <td>{{ item.assignedSDG.6 }}</td>
-                        <td>{{ item.assignedSDG.7 }}</td>
-                        <td>{{ item.assignedSDG.8 }}</td>
-                        <td>{{ item.assignedSDG.9 }}</td>
-                        <td>{{ item.assignedSDG.10 }}</td>
-                        <td>{{ item.assignedSDG.11 }}</td>
-                        <td>{{ item.assignedSDG.12 }}</td>
-                        <td>{{ item.assignedSDG.13 }}</td>
-                        <td>{{ item.assignedSDG.14 }}</td>
-                        <td>{{ item.assignedSDG.15 }}</td>
-                        <td>{{ item.assignedSDG.16 }}</td>
-                        <td>{{ item.assignedSDG.17 }}</td>
-                        <td>{{ item.assignedSDG.18 }}</td>
+                        <td style="border-right: 1pt solid black; border-left: 1pt solid black fill; background-color:rgba({{item.assignedSDG.Validation.ColorRed}}, {{item.assignedSDG.Validation.ColorGreen}}, {{item.assignedSDG.Validation.ColorBlue}}, 1);"></td>
+                        {% comment %} <td><a href="{{ item.get_absolute_url }}">{{ item.Module_Name|truncatechars:50 }}</a></td> {% endcomment %}
+                        <td><a href="{{ item.get_absolute_url }}">{{ item.Module_ID }}</a></td>
+                        <td>Model<br>String</td>
+                        <td>{{ item.assignedSDG.1 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.0 }}</td>
+                        <td>{{ item.assignedSDG.2 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.1 }}</td>
+                        <td>{{ item.assignedSDG.3 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.2 }}</td>
+                        <td>{{ item.assignedSDG.4 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.3 }}</td>
+                        <td>{{ item.assignedSDG.5 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.4 }}</td>
+                        <td>{{ item.assignedSDG.6 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.5 }}</td>
+                        <td>{{ item.assignedSDG.7 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.6 }}</td>
+                        <td>{{ item.assignedSDG.8 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.7 }}</td>
+                        <td>{{ item.assignedSDG.9 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.8 }}</td>
+                        <td>{{ item.assignedSDG.10 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.9 }}</td>
+                        <td>{{ item.assignedSDG.11 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.10 }}</td>
+                        <td>{{ item.assignedSDG.12 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.11 }}</td>
+                        <td>{{ item.assignedSDG.13 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.12 }}</td>
+                        <td>{{ item.assignedSDG.14 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.13 }}</td>
+                        <td>{{ item.assignedSDG.15 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.14 }}</td>
+                        <td>{{ item.assignedSDG.16 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.15 }}</td>
+                        <td>{{ item.assignedSDG.17 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.16 }}</td>
+                        <td>{{ item.assignedSDG.18 }} <br> {{ item.assignedSDG.Validation.SDG_Keyword_Counts.17 }}</td>
                         {% if item.assignedSDG.Result != ""%}
                             <td style="border: solid 0 #060; border-left-width:2px; border-right-width:2px; text-align: center">{{ item.assignedSDG.Result }}</td>
                         {% else %}
                             <td style="border: solid 0 #060; border-left-width:2px; border-right-width:2px; text-align: center">None</td>
                         {% endif %}
+                        <td>{{ item.assignedSDG.Validation.Similarity|floatformat:"2" }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
